--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   vector_map_tiles: ^7.3.1
   path_provider: ^2.1.3
   pmtiles: ^1.3.0
-  shelf: ^1.4.1
+  flutter_map_geojson: ^1.0.8
 
 dev_dependencies:
   flutter_test:
@@ -62,6 +62,8 @@ flutter:
 
   assets:
     - assets/pmtiles/vilnius.pmtiles
+    - assets/styles/bright/style.json
+    - assets/geojson/tracks.geojson
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
