--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,9 +61,10 @@ flutter:
   uses-material-design: true
 
   assets:
-    - assets/pmtiles/vilnius.pmtiles
-    - assets/styles/bright/style.json
-    - assets/geojson/tracks.geojson
+    - assets/pmtiles/
+    - assets/geojson/
+    - assets/styles/bright/
+    - assets/styles/bright/sprites/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
